fix: remove scrollbar track

--- a/Components/MapLayout/MapLayout.css
+++ b/Components/MapLayout/MapLayout.css
@@ -27,8 +27,7 @@
 
   ::-webkit-scrollbar {
     height: 4px;             
-    width: 4px;         
-    border: 1px solid #d5d5d5;
+    width: 4px;
   }
   
   ::-webkit-scrollbar-track {
